--- a/.azure-pipelines/weekly-examples-update.yml
+++ b/.azure-pipelines/weekly-examples-update.yml
@@ -91,4 +91,4 @@ jobs:
         $Title = "[v1] Examples Update"
         $Body = "This pull request was automatically created by Azure Pipelines. Contains examples update."
         $BaseBranch = "dev"
-        . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch
+        . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch -HeadBranchName "timayabi2020:$(git branch --show-current)"
