--- a/.azure-pipelines/weekly-examples-update.yml
+++ b/.azure-pipelines/weekly-examples-update.yml
@@ -74,7 +74,7 @@ jobs:
         git status
         git add .
         git commit -m "Updating examples"
-        git push --set-upstream "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git" $(ComputeBranch.WeeklyExamplesBranch)
+        git push --set-upstream origin $(ComputeBranch.WeeklyExamplesBranch)
         git status
 
   - task: PowerShell@2
@@ -90,4 +90,4 @@ jobs:
         $Title = "[v1] Examples Update"
         $Body = "This pull request was automatically created by Azure Pipelines. Contains examples update."
         $BaseBranch = "dev"
-        . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch -HeadBranchName "microsoftgraph:$(git branch --show-current)"
+        . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch
