--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -132,7 +132,7 @@ jobs:
             git add .
             git commit -m 'Weekly OpenApiDocs Download.'
             git status
-            git push --set-upstream "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git" $(ComputeBranch.WeeklyBranch)
+            git push --set-upstream origin $(ComputeBranch.WeeklyBranch)
             git status
 
 # References
